# DuckTap

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/DuckTap/: SKILL.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: ci.yml  publish.yml
catalog/: adyen.yaml  asana.yaml  box.yaml  digitalocean.yaml  discord.yaml  elevenlabs.yaml  github.yaml  hubspot.yaml  jira.yaml  launchdarkly.yaml  linear.yaml  mailchimp.yaml  mercury.yaml  notion.yaml  openrouteservice.yaml  petstore.yaml  plaid.yaml  postman.yaml  reddit.yaml  sentry.yaml  shopify.yaml  slack.yaml  spotify.yaml  stripe.yaml  supabase.yaml  telegram.yaml  trello.yaml  twilio.yaml  twitch.yaml  zendesk.yaml
demo/: DEMO.md  demo.tape
demo/_render/: .gitignore  README.md  run_petstore.txt  session.js  terminal.html
docs/: ARCHITECTURE.md  COMPARISON.md  COMPARISON_TEST.md  PLUGINS.md  ROADMAP.md  ducktap-vs-printing-press.md  positioning.md
docs/superpowers/plans/: 2026-05-18-v02-polish-and-dashboard.md
launch/: get-5-users.md  mcp-community.md  reddit-and-x.md  show-hn.md
skills/ducktap/: SKILL.md
skills/ducktap-publish/: SKILL.md
skills/ducktap-reprint/: SKILL.md
skills/ducktap-score/: SKILL.md
src/ducktap/: __init__.py  __main__.py  absorb.py  cli.py  crowd_sniff.py  emboss.py  insight.py  library.py  macros.py  manifest.py  polish.py  publish.py  vision.py
src/ducktap/catalog/: __init__.py  registry.py
src/ducktap/core/: naming.py  (+5 more)
tests/: test_action_recorder.py  test_catalog.py  test_creative_layer.py  test_e2e.py  test_generated_cli_data_lake.py  test_generated_cli_runtime.py  test_generated_domain_tables.py  test_generated_multilang.py  test_graphql_discovery.py  test_har_auth_detect.py  test_library.py  test_macros.py  test_mitm_sniff.py  test_multilang_generators.py  test_naming.py  test_openapi.py  test_plugins.py  test_polish.py  test_proof.py  test_publish.py  test_rate_limit_detect.py  test_version.py  test_webui.py
website/: index.html  script.js  style.css  vercel.json
(+63 files in other folders)
