[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ducktap"
version = "0.2.1"
description = "DuckTap — a CLI factory for AI agents. Print agent-native CLIs + MCP servers + skills from any API or website."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "DuckTap Contributors" }]
keywords = ["mcp", "cli", "llm", "agents", "openapi", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "openapi-spec-validator>=0.7",
    "jsonref>=1.1",
    "mcp>=1.0",                  # MCP SDK for generated servers
    "fastapi>=0.110",            # web ui
    "uvicorn[standard]>=0.30",
    "litellm>=1.40",             # multi-LLM provider abstraction
    "click>=8.1",                # generated CLIs use Click
]

[project.optional-dependencies]
sniff = [
    "playwright>=1.45",          # browser sniffing
    "mitmproxy>=11.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ducktap = "ducktap.cli:app"

[project.urls]
Homepage = "https://github.com/zanni098/DuckTap"
Repository = "https://github.com/zanni098/DuckTap"
Issues = "https://github.com/zanni098/DuckTap/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ducktap"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# E501: long lines OK in templates / docstrings.
# B008: required by Typer's `typer.Option(...)` default-arg idiom.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
